<resources>
    <string name="app_name">RedditCL</string>
    <string name="user_name">user name</string>
    <string name="created_at">created at</string>
    <string name="comment_text">Comment text</string>
    <string name="load_next_comments">Load next comments</string>
    <string name="delete">Delete</string>
    <string name="login">login</string>
    <string name="load_more">load more…</string>
    <string name="by">By:</string>
    <string name="reposted_from">reposted from:</string>
    <string name="search">Search</string>
    <string name="new_string">new</string>
    <string name="popular">Popular</string>
    <string name="welcome">Welcome</string>
    <string name="try_string">try</string>
    <string name="on">On:</string>
    <string name="comments">Comments</string>
    <string name="reddits">Reddits</string>
    <string name="all">All</string>
    <string name="saved">Saved</string>
    <string name="my_friends">My friends</string>
    <string name="clean_storage_btn">Clear storage</string>
    <string name="logout_btn">logout</string>
    <string name="subscribe">subscribe</string>
    <string name="show_all_btn">show all</string>
    <string name="server_failed">loading from server failed:</string>
    <string name="load_from_cache">trying to load from cache</string>
    <string name="friends_all">Total friends %1$d</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="skip_btn">skip</string>
    <string name="ob1_title">ob1_title</string>
    <string name="ob2_title">SubHumblr</string>
    <string name="ob3_title">ob3_title</string>
    <string name="ob1_text">ob1_text</string>
    <string name="ob2_text">ob2_text</string>
    <string name="ob3_text">ob3_text</string>
    <string name="ready_btn">ready</string>
    <string name="humblr">Humblr</string>
    <string name="welcome_txt">Find friends</string>
</resources>