<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:visibility="gone">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/commentInfoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@color/purple_600" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColor="@color/purple_600" />

            <TextView
                android:id="@+id/createdAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/created_at" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/commentLine"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentInfoLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/commentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/comment_text"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/commentLine"
            app:layout_constraintTop_toBottomOf="@id/commentInfoLayout" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/commentImage"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/commentLine"
            app:layout_constraintTop_toBottomOf="@id/commentText" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/replyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/commentText"
            app:layout_constraintTop_toBottomOf="@id/commentImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/addComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/showMoreComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:visibility="gone"
            android:paddingStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/purple_600"
            />
        <TextView
            android:id="@+id/LoadNextComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            android:paddingStart="20dp"
            android:text="@string/load_next_comments"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/purple_600"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>
